# gcp-practice

./: README.md  docker-compose.yml
my-fastapi-app/: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  schema.graphql
my-fastapi-app/app/: main.py
my-fastapi-app/app/api/v1/: users.py
my-fastapi-app/app/core/: config.py
my-fastapi-app/app/core/config/: base_settings.py  cloud_settings.py  config.py  local_settings.py
my-fastapi-app/app/db/: base_model.py  session.py
my-fastapi-app/app/db/models/: user.py
my-fastapi-app/app/graphql/: schema.py
my-fastapi-app/app/graphql/resolvers/: product.py  shop.py  user.py
my-fastapi-app/app/graphql/types/: product.py  shop.py  user.py
my-fastapi-app/app/repositories/: user.py
my-fastapi-app/app/schemas/: user.py
my-fastapi-app/app/services/: user.py
my-fastapi-app/config/: settings.py
my-fastapi-app/scripts/: cloudsql_connect.py  export_schema.py  init_db.py  seed_db.py
my-fastapi-app/scripts/sql/: 01_users.sql  02_create_table_user.sql  03_users.sql
my-remix-app/: .dockerignore  .eslintrc.cjs  .gitignore  Dockerfile  README.md  codegen.yml  package-lock.json  package.json
my-remix-app/app/: root.tsx  types.ts
my-remix-app/app/components/: UserList.tsx
my-remix-app/app/graphql/users/: mutations.ts  queries.ts
my-remix-app/app/lib/: graphql-no-lib-client.ts
my-remix-app/app/lib/graphql/: graphql-client.ts  operations.ts  types.ts
my-remix-app/app/mutations/: createUser.ts  deleteUser.ts
my-remix-app/app/queries/: getUsers.ts
my-remix-app/app/routes/: _index.tsx  graphql.tsx
