[project]
name = "my-fastapi-app"
version = "0.1.0"
description = ""
authors = [
    {name = "nansystem",email = "sato171786@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.110.0,<0.111.0)",
    "uvicorn (>=0.27.1,<0.28.0)",
    "pydantic (>=2.6.1,<2.7.0)",
    "pydantic-settings (>=2.1.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.25"
pymysql = "^1.1.0"
python-dotenv = "^1.0.0"
